darwin/k8s/manifests/darwin-celery-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: darwin-dev
  labels:
    app: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: registry-dal2.penguintech.io/darwin/flask-backend:dev
        imagePullPolicy: Always
        command: ["celery"]
        args:
        - "-A"
        - "celery_worker.celery"
        - "worker"
        - "--loglevel=info"
        - "-Q"
        - "reviews,polling"
        - "--concurrency=4"
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 512Mi
